Fix information section subtext not centering
* The subtext was centered, but because it was not centered in relation
to the boxes, it was slightly off.

* Add a parent container holding .box-container so that the flex row is
  kept while the subtext and box can be a column.

* Add the subtext as a child to .box-container so it is aligned with
the .box class.

--- a/style.css
+++ b/style.css
@@ -100,6 +100,8 @@ footer {
   display: flex;
   padding: 10px;
   padding-bottom: 0;
+  flex-direction: column;
+  align-items: center;
 }
 .box {
   border: #3882F6 solid;
